@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-06-22T00:34:30Z",
+  "timestamp" : "2022-06-22T08:08:47Z",
   "count_outdated" : 389,
   "uniques_outdated" : 83,
-  "count" : 492,
-  "uniques" : 91,
+  "count" : 491,
+  "uniques" : 90,
   "views" : [
     {
       "timestamp": "2022-06-08T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
