@@ -1,11 +1,11 @@
 {
-  "count": 103,
-  "uniques": 4,
+  "count": 102,
+  "uniques": 3,
   "views": [
     {
       "timestamp": "2022-06-08T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-06-09T00:00:00Z",
